--- a/cssfiles/reset.css
+++ b/cssfiles/reset.css
@@ -17,6 +17,7 @@
     --primary-dark: #D9A679;
     --primary-light: #D9D0C7;
 
+    --secondary-normal: #734636;
     --secondary-dark: #734636;
     --secondary-light: #D9D0C7;
 
@@ -32,6 +33,7 @@
     --primary-dark: #181C26;
     --primary-light: #A6998F;
 
+    --secondary-normal: #A6998F;
     --secondary-dark: #181C26;
     --secondary-light: #A6998F;
 }
