--- a/cssfiles/style.css
+++ b/cssfiles/style.css
@@ -351,7 +351,6 @@ main {
     background-color: var(--secondary-light);
     border: 0.2rem solid var(--secondary-dark);
     color: var(--secondary-dark);
-    font-weight: 800;
     cursor: pointer;
 }
 
@@ -367,6 +366,7 @@ main {
     flex-direction: column;
     gap: 0.5rem;
     margin: 0;
+    background-color: var(--primary-light);
 }
 
 .highlight {
@@ -379,14 +379,14 @@ main {
 }
 
 .blue {
-    color: var(--primary-light);
+    color: var(--secondary-dark);
 }
 
 .portfolio-title {
     font-family: var(--font-subtitle);
     font-weight: 700;
     font-size: 2rem;
-    color: var(--color-default);
+    color: var(--secondary-dark);
     margin: 0rem 10rem;
 }
 
