--- a/cssfiles/style.css
+++ b/cssfiles/style.css
@@ -390,29 +390,60 @@ main {
     margin: 0rem 10rem;
 }
 
-
-
-
-
-
-
-
-
-
-
 .portfolio-container-main {
     margin-top: 3rem;
     margin: 0% 15%;
-    column-count: 2;
+}
+
+.card-container {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    background-color: var(--secondary-dark);
+    color: var(--secondary-light);
+    border-radius: 0.5rem;
+
+    align-content: center;
 }
 
 .portfolio-card-container {
     padding: 1rem;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
     gap: 2rem;
 }
+
+.card-container > span {
+    margin: auto;
+    border-radius: 0.5rem;
+}
+
+.card-container > img {
+    width: 15rem;
+    border-radius: 0.5rem;
+    box-shadow: 0.05rem 0.05rem 0.5rem rgba(0, 0, 0, 0.2);
+
+    display: flex;
+    flex-direction: column;
+}
+
+.portfolio-description {
+    background-color: var(--secondary-dark);
+    padding: 1rem;
+    border-radius: 0.5rem;
+
+    p {
+        font-size: 1rem;
+        white-space: pre-line;
+    }
+}
+
+
+
+
+
+
+
 
 .portfolio-card {
     background: var(--primary-dark);
