--- a/cssfiles/style.css
+++ b/cssfiles/style.css
@@ -23,7 +23,6 @@ nav {
     display: flex;
     flex-direction: row; /* default */
     justify-content: space-between;
-    align-items: center;
     padding: 1.5rem 2.5rem;
 }
 
@@ -41,7 +40,6 @@ nav {
     gap: 1.5rem;
     text-transform: uppercase;
     font-weight: 800;
-    margin-left: 58%;
 }
 
 li {
@@ -221,12 +219,13 @@ li {
 }
 
 .button-hero > a > button {
-    margin-right: 25rem;
+    margin: auto;
     color: var(--secondary-dark);
     background-color: transparent;
     border: 0.2rem solid var(--secondary-dark);
     border-radius: 25rem;
-    padding: 0.5rem;
+    padding: 0.8rem;
+    text-wrap: nowrap;
     transition: background-color 0.3s ease;
     box-shadow: 0.05rem 0.05rem 0.5rem rgba(0, 0, 0, 0.2);
     text-transform: uppercase;
@@ -258,13 +257,13 @@ main {
     color: var(--secondary-dark);
 }
 
-.viewport {
+/*.viewport {
     width: 100%;
     overflow: hidden;
     position: relative;
 }
 
-/* .parallax-container {
+.parallax-container {
     position: relative;
     height: 100vh;
     perspective: 0.5rem;
@@ -299,6 +298,10 @@ main {
     box-shadow: 0.05rem 0.05rem 0.5rem rgba(0, 0, 0, 0.2);
 }
 
+.about-content-title {
+    max-width: 60%;
+}
+
 .about-content-title > span, h2 {
     font-family: var(--font-title);
     text-transform: capitalize;
@@ -322,29 +325,32 @@ main {
 
 .about-content-title > p {
     margin-bottom: 1rem;
+    margin-left: 10%;
 }
 
 .features-icon {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin-top: 1rem;
     gap: 2rem;
+    margin-top: 2rem;
 }
 
 .features-icon li {
     background-color: var(--secondary-dark);
-    padding: 0.5rem;
-    width: 15rem;
+    padding: 0.2rem;
+    width: 8rem;
     border: 0.2rem solid var(--secondary-dark);
     border-radius: 25rem;
     justify-content: center;
+    margin-left: 10%;
 
     font-size: 1.2rem;
     font-family: var(--font-default);
     font-weight: 600;
     color: var(--primary-light);
-    text-transform: capitalize;       
+    text-transform: capitalize;   
 }
 
 .features-icon .icon:hover {
@@ -374,7 +380,6 @@ main {
     font-size: 1rem;
     font-weight: bold;
     text-transform: uppercase;
-    margin-top: 1rem;
     margin: 0rem 10rem;
 }
 
@@ -391,30 +396,21 @@ main {
 }
 
 .portfolio-container-main {
-    margin-top: 3rem;
-    margin: 0% 15%;
+    margin: 2% 15%;
+}
+
+.card-container-main {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 2rem;
 }
 
 .card-container {
     display: flex;
     flex-direction: column;
-    padding: 1rem;
     background-color: var(--secondary-dark);
     color: var(--secondary-light);
-    border-radius: 0.5rem;
-
-    align-content: center;
-}
-
-.portfolio-card-container {
-    padding: 1rem;
-    display: flex;
-    flex-direction: row;
-    gap: 2rem;
-}
-
-.card-container > span {
-    margin: auto;
     border-radius: 0.5rem;
 }
 
@@ -429,12 +425,13 @@ main {
 
 .portfolio-description {
     background-color: var(--secondary-dark);
-    padding: 1rem;
     border-radius: 0.5rem;
 
     p {
         font-size: 1rem;
-        white-space: pre-line;
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+        text-transform: capitalize;
     }
 }
 
