--- a/cssfiles/style.css
+++ b/cssfiles/style.css
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-    max-width: 1920px;
+    max-width: 100%;
     background: var(--primary-light);
     color: var(--secondary-normal);
     overflow-x: hidden;
@@ -98,11 +98,11 @@ li {
 .nav-profile {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     align-items: center;
     font-family: var(--font-title);
     text-shadow: 0.05rem 0.05rem 0.5rem rgba(0, 0, 0, 0.2);
     margin-top: 1.5rem;
-    gap: 10rem;
     padding: 2rem;
 }
 
@@ -146,7 +146,7 @@ li {
     height: 100%;
 
     img {
-        width: 20rem;
+        max-width: 20rem;
         border-radius: 25rem;
         margin: 0 auto;
         box-shadow: 0.05rem 0.05rem 0.5rem rgba(0, 0, 0, 0.2);
@@ -159,27 +159,27 @@ li {
     color: var(--secondary-dark);
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     padding: 2.5rem 2.5rem;
 
     .quote {
         font-weight: 600;
         text-align: left;
-        padding-right: 5rem;
         align-items: center;
-        margin-top: 5rem;
         color: var(--color-default);
         font-family: var(--font-subtitle);
         font-size: 1.2rem;
         font-style: italic;
         margin-bottom: 2rem;
+        margin-top: 5rem;
+        width: 25rem;
+        margin-left: 60vh;
     }
 }
 
 .social-icons {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     gap: 2rem;
     font-size: 1.5rem;
 
@@ -238,6 +238,18 @@ li {
     }
 }
 
+.social-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-content: center;
+    gap: 10rem;
+}
+
+.button-container {
+    flex-wrap: wrap;
+}
+
 /* MAIN */
 main {
     display: flex;
@@ -291,15 +303,13 @@ main {
     transform: translate3d(0, 0, 0);
 } */
 
-.about-picture > img {
-    width: 20rem;
-    border-radius: 0.5rem;
-    margin: 0rem 3rem;
-    box-shadow: 0.05rem 0.05rem 0.5rem rgba(0, 0, 0, 0.2);
+.about-picture {
+    padding: 1rem;
 }
 
-.about-content-title {
-    max-width: 60%;
+.about-picture > img {
+    border-radius: 0.5rem;
+    box-shadow: 0.05rem 0.05rem 0.5rem rgba(0, 0, 0, 0.2);
 }
 
 .about-content-title > span, h2 {
@@ -402,8 +412,10 @@ main {
 .card-container-main {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    gap: 2rem;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    padding: 0 2rem;
 }
 
 .card-container {
@@ -415,7 +427,6 @@ main {
 }
 
 .card-container > img {
-    width: 15rem;
     border-radius: 0.5rem;
     box-shadow: 0.05rem 0.05rem 0.5rem rgba(0, 0, 0, 0.2);
 
