--- a/cssfiles/style.css
+++ b/cssfiles/style.css
@@ -640,8 +640,8 @@ main {
         align-items: center;
         font-family: var(--font-title);
         text-shadow: 0.05rem 0.05rem 0.5rem rgba(0, 0, 0, 0.2);
-        margin-top: 1.5rem;
-        padding: 2rem;
+        margin: 0rem;
+        padding: 0rem;
     }
     
     .nav-profile-left {
@@ -686,6 +686,7 @@ main {
         justify-content: center;
         align-items: center;
         height: 100%;
+        padding-bottom: 1rem;
     
         img {
             max-width: 15rem;
