--- a/cssfiles/style.css
+++ b/cssfiles/style.css
@@ -455,6 +455,7 @@ main {
     cursor: default;
 }
 
+/* RESOLUÇÃO DE 758PX */
 @media screen and (max-width: 758px) {
     .menu li {
         display: none;
@@ -602,9 +603,147 @@ main {
         flex-direction: column;
         align-items: center;
     }
+
+    /* ABOUT SECTION */
+    .about-container {
+        display: flex;
+        height: 100%;
+        margin-bottom: 5%;
+    }
     
+    .about-content {
+        display: flex;
+        margin: 5%;
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    /*.viewport {
+        width: 100%;
+        overflow: hidden;
+        position: relative;
+    }
+    
+    .parallax-container {
+        position: relative;
+        height: 100vh;
+        perspective: 0.5rem;
+        overflow-x: hidden;
+        overflow-y: scroll;
+        
+        display: flex;
+    }
+    
+    .parallax-container::-webkit-scrollbar {
+        display: none;
+    }
+    
+    .image-parallax {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+    
+    .image-parallax img {
+        display: block;
+        height: auto;
+        transform: translate3d(0, 0, 0);
+    } */
+    
+    .about-picture {
+        display: none;
+        padding: 5rem;
+
+        img {
+            max-width: 10rem;
+            border-radius: 25rem;
+            box-shadow: 0.05rem 0.05rem 0.5rem rgba(0, 0, 0, 0.2);
+        }
+    }
+    
+    .about-content-title > span, h2 {
+        font-family: var(--font-title);
+        text-transform: capitalize;
+        font-size: 1.5rem;
+    }
+    
+    .about-content-title > h2 {
+        font-size: 2.5rem;
+        text-transform: capitalize;
+        font-family: var(--font-title);
+    }
+    
+    .about-content-title > hr {
+        border: none;
+        height: 0.15rem;
+        width: 10rem;
+        background-color: var(--secondary-dark);
+        margin-top: 0.2rem;
+        margin-bottom: 2rem;
+    }
+    
+    .about-content-title > p {
+        margin-bottom: 1rem;
+        margin-left: 0;
+        text-align: center;
+    }
+    
+    .features-icon {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        gap: 2rem;
+        margin-top: 2rem;
+    }
+    
+    .features-icon li {
+        background-color: var(--secondary-dark);
+        padding: 0.2rem;
+        width: 10rem;
+        border: 0.2rem solid var(--secondary-dark);
+        border-radius: 25rem;
+        justify-content: center;
+        margin-left: 0;
+        text-align: center;
+    
+        font-size: 1.2rem;
+        font-family: var(--font-default);
+        font-weight: 600;
+        color: var(--primary-light);
+        text-transform: capitalize;   
+    }
+    
+    .features-icon .icon:hover {
+        background-color: var(--secondary-light);
+        border: 0.2rem solid var(--secondary-dark);
+        color: var(--secondary-dark);
+        cursor: pointer;
+    }
+    
+
+    /* PORTFOLIO SECTION */
+    .portfolio-container {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        justify-content: center;
+    }
+    
+    .portfolio-header {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5rem;
+        margin: 0;
+        background-color: var(--primary-light);
+    }
+
     .highlight {
         margin: 0;
+        font-size: 2rem;
     }
 
     .portfolio-title {
@@ -615,6 +754,7 @@ main {
     .card-container-main {
         flex-direction: column;
         height: 20rem;
+        margin-top: 5%;
     }
 
     .card-container > img {
