--- a/style.css
+++ b/style.css
@@ -616,6 +616,15 @@ main {
         flex-direction: column;
         align-items: center;
     }
+
+    .about-container {
+        margin-top: 15rem;
+        height: auto;
+    }
+
+    .about-picture {
+        display: none;
+    }
     
     .highlight {
         margin: 0;
@@ -624,6 +633,16 @@ main {
     .line {
         height: 0.15rem;
         width: 20rem;
+    }
+
+    .portfolio-container {
+        margin: 0rem 5rem;
+        height: auto;
+    }
+
+    .portfolio-header {
+        height: 10rem;
+        margin-top: 4rem;
     }
 
     .portfolio-title {
@@ -713,7 +732,6 @@ main {
             margin: 0 auto;
             box-shadow: 0.05rem 0.05rem 0.5rem rgba(0, 0, 0, 0.2);
         }
-        
     }
 
     .hero-container {
@@ -788,9 +806,38 @@ main {
         flex-direction: column;
         align-items: center;
     }
+
+    .about-container {
+        height: auto;
+        margin-top: 5rem;
+    }
+
+    .about-content {
+        margin: 1.5rem;
+        gap: 0;
+    }
+
+    .about-picture {
+        display: none;
+    }
+
+    .about-icons {
+        column-count: 2;
+        column-gap: 1rem; /* Espaço entre as colunas */
+        padding: 0rem;
+        list-style-type: none;
+    }
+
+    .features-icon {
+        margin-bottom: 4rem; /* Espaçamento entre os ícones */
+
+        li {
+            font-size: 1rem;
+        }
+    }
     
     .highlight {
-        margin: auto;
+        margin: 2rem;
         text-align: center;
     }
 
@@ -799,9 +846,13 @@ main {
         width: 20rem;
     }
 
+    .portfolio-header {
+        height: auto;
+    }
+
     .portfolio-title {
         font-size: 1.5rem;
-        margin: auto;
+        margin: 2rem;
         text-align: center;
     }
 
