--- a/style.css
+++ b/style.css
@@ -284,40 +284,6 @@ main {
     border-color: rgb(232, 230, 230);
 }
 
-/*.viewport {
-    width: 100%;
-    overflow: hidden;
-    position: relative;
-}
-
-.parallax-container {
-    position: relative;
-    height: 100vh;
-    perspective: 0.5rem;
-    overflow-x: hidden;
-    overflow-y: scroll;
-    
-    display: flex;
-}
-
-.parallax-container::-webkit-scrollbar {
-    display: none;
-}
-
-.image-parallax {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-.image-parallax img {
-    display: block;
-    height: auto;
-    transform: translate3d(0, 0, 0);
-} */
-
 .about-picture {
     padding: 1rem;
 }
@@ -463,13 +429,37 @@ main {
     padding: 1rem;
     background-color: var(--secondary-dark);
     font-size: 1rem;
-    /* word-wrap: break-word;
-    overflow-wrap: break-word; */
     text-transform: capitalize;
     z-index: 99;
     cursor: default;
 }
 
+/* FOOTER */
+footer {
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    background: var(--primary-dark);
+    color: var(--color-default);
+}
+
+.footer-copyright {
+    color: var(--color-default);
+    font-family: var(--font-default);
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.social-media {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+/* SCREENS MAX WIDTH 758PX */
 @media screen and (max-width: 758px) {
     body {
         width: 100vh;
@@ -665,7 +655,7 @@ main {
     }
 }
 
-/* RESOLUÇÃO 480PX */
+/* SCREENS MAX WIDTH 480PX */
 @media screen and (max-width: 480px) {
     body {
         width: 100vh;
@@ -877,135 +867,4 @@ main {
     .card-container > img {
         max-width: 40rem;
     }
-}
-
-
-
-
-
-
-
-
-.portfolio-card {
-    background: var(--primary-dark);
-    padding: 2rem;
-    border-radius: 0.5rem;
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    flex-basis: 29rem;
-}
-
-.portfolio-card-header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: end;
-}
-
-.portfolio-card-header-details {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-}
-
-.portfolio-card-title {
-    color: var(--color-default);
-    font-family: var(--font-subtitle);
-    font-size: 1.5rem;
-    font-weight: 700;
-    text-transform: capitalize;
-    margin-right: 3.5rem;
-}
-
-.portfolio-evaluation {
-    color: var(--primary-normal);
-    font-family: var(--font-default);
-    font-size: 1rem;
-    font-weight: 500;
-}
-
-.portfolio-description{
-    color: var(--primary-normal);
-    font-family: var(--font-default);
-    font-size: 1rem;
-    font-weight: 400;
-}
-
-.portfolio-author {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 0.5rem;
-}
-
-.portfolio-author > img {
-    border-radius: 20rem;
-    width: 1.5rem;
-}
-
-.portfolio-author-name {
-    color: var(--primary-normal);
-    font-family: var(--font-default);
-    font-size: 1rem;
-    font-weight: 600;
-    text-transform: capitalize;
-}
-
-.video-container {
-    position: relative;
-    width: 100%;
-    height: 100vh; /* 100% da altura da viewport */
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-#background-video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    z-index: -1; /* Coloca o vídeo atrás do conteúdo */
-}
-
-.video-message {
-    margin: auto;
-    font-size: 4rem;
-    margin-bottom: 1rem;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-}
-
-.video-image {
-    width: 40rem;
-    margin: auto;
-}
-
-/* FOOTER */
-footer {
-    padding: 2rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
-    background: var(--primary-dark);
-    color: var(--color-default);
-}
-
-.footer-copyright {
-    color: var(--color-default);
-    font-family: var(--font-default);
-    font-size: 1rem;
-    font-weight: 500;
-}
-
-.social-media {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 0.5rem;
 }
