Creating and adding images for the toggle button

--- a/style.css
+++ b/style.css
@@ -80,9 +80,10 @@ li {
     background-color: transparent;
     border-radius: 25rem;
     border: 0.1rem solid var(--secondary-normal);
-    padding: 0.25rem 1rem;
+    padding: 0.25rem 1rem 0rem 1rem;
     transition: background-color 0.3s ease;
     box-shadow: 0.05rem 0.05rem 0.5rem rgba(0, 0, 0, 0.2);
+    width: 3.5rem;
     
     &:hover {
         cursor: pointer;
